Bugfix: when dragging a scrollbar, mouseup clicked whatever you were hovering (seen on linux)

--- a/src/components/Dialogs/GamePageDialog.css
+++ b/src/components/Dialogs/GamePageDialog.css
@@ -119,6 +119,10 @@
                     &.dd-open .tag-button {
                         background-color: var(--pf-bg-300);
                     }
+                    &.dd-open .icon-button,
+                    .icon-button:hover {
+                        background-color: var(--pf-bg-500);
+                    }
                 }
             }
 
